--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="--orange"></div>
 
+    <p class="week">Mon</p>
+    <p class="week">Tue</p>
+    <p class="week">Wed</p>
+    <p class="week">Thu</p>
+    <p class="week">Fri</p>
+    <p class="week">Sat</p>
+    <p class="week">Sun</p>
+
+    <p class="numbers">6</p>
+    <p class="numbers">7</p>
+    <p class="numbers">8</p>
+    <p class="numbers">9</p>
+    <p class="numbers">10</p>
+    <p class="numbers">11</p>
+    <p class="numbers">12</p>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
